# LangAgent-OS

./: .env.example  .gitignore  CHANGES_UI_LAYER_AND_UPLOADS.md  OPTION_B_INTEGRATION_SPEC.md  README.md  TEST_CASES_AND_RESULTS.md  UI_TEST_CASES.md  alembic.ini  docker-compose.yml  pyproject.toml
agentos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: main.py  schemas.py
app/agents/: architecture_agent.py  base.py  code_review_agent.py  coding_plan_agent.py  commercial_agent.py  deep_work.py  discovery_agent.py  market_scan.py  milestone_code_agent.py  mock_agents.py  mock_commercial.py  prd_agent.py  qa_auditor.py  readiness_agent.py  scaffold_agent.py  sow_agent.py  supervisor.py  user_guide_agent.py
app/api/: routes_approvals.py  routes_artifacts.py  routes_auth.py  routes_documents.py  routes_eval_report.py  routes_github.py  routes_github_webhook.py  routes_governance.py  routes_health.py  routes_memory.py  routes_policies.py  routes_projects.py  routes_runs.py  routes_sessions.py  routes_sot.py  routes_system.py  routes_traceability.py
app/artifacts/: generator.py
app/core/: config.py  logging.py  metrics.py  runtime.py  security.py
app/db/: models.py  session.py
app/registry/: agents.yaml  loader.py
app/services/: approvals.py  artifacts.py  auth.py  change_control.py  comments.py  context_retrieval.py  dashboard.py  document_ingestion.py  eval_report.py  export_service.py  github_publish.py  linting.py  llm_service.py  policies.py  projects.py  provenance.py  runs.py  sessions.py  snapshots.py  state_graph.py  (+2 more)
scripts/: demo_full_workflow.py
(+94 files in other folders)
