[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentos"
version = "0.1.0"
description = "LangGraph AgentOS — a consulting delivery operating system"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    # Orchestration
    "langgraph>=0.2.0",
    # LLM
    "litellm>=1.40.0",
    # Templating
    "jinja2>=3.1.0",
    # Document parsing (UI uploads)
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    # Config
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    # Auth (Phase 3)
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Logging
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
